# frate-registry

./: Cargo.toml  REGISTRIES.md  registry.json  srcipt.json
src/: cli.rs  fetch.rs  lib.rs  main.rs  registry.rs  util.rs
tools/: atuin.json  bat.json  bottom.json  broot.json  delta.json  du-dust.json  exa.json  fd.json  fzf.json  gitui.json  helix.json  hyperfine.json  just.json  procs.json  ripgrep.json  starship.json  tealdeer.json  tokei.json  zellij.json
