[package]
name = "frate-registry"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
tokio = "1.46.1"
rayon = "1.10.0"
sha2 = "0.11.0-rc.0"
hex = "0.4.3"
walkdir = "2.5.0"